final camera ready version with copyright notice and DOI

--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -1,4 +1,4 @@
-	\documentclass{sigchi}
+\documentclass{sigchi}
 
 % Use this command to override the default ACM copyright statement (e.g. for preprints). 
 % Consult the conference website for the camera-ready copyright statement.
@@ -12,9 +12,17 @@ lists, requires prior specific permission and/or a fee.\\
 {\confname{CSCW'15}},	  March 14-18, 2015 in Vancouver, Canada\\
 }
 
+\toappear{\scriptsize Permission to make digital or hard copies of all or part of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. Copyrights for components of this work owned by others than ACM must be honored. Abstracting with credit is permitted. To copy otherwise, or republish, to post on servers or to redistribute to lists, requires prior specific permission and/or a fee. Request permissions from permissions@acm.org. \\
+{\emph{CSCW 2015}}, March 14--18, 2015, Vancouver, BC, Canada. \\
+Copyright is held by the owner/author(s). Publication rights licensed to ACM. \\
+ACM 978-1-4503-2922-4/15/03\ ...\$15.00.\\
+http://dx.doi.org/10.1145/2675133.2675286}
+\clubpenalty=10000
+\widowpenalty = 10000
+
 % Arabic page numbers for submission. 
 % Remove this line to eliminate page numbers for the camera ready copy
-\pagenumbering{arabic}
+%\pagenumbering{arabic}
 
 
 % Load basic packages
@@ -65,7 +73,7 @@ breaklinks=true,
 % End of preamble. Here it comes the document.
 \begin{document}
 
-\title{The Virtuous Circle of Wikipedia\\ \vspace{0.3cm} {\LARGE \bf Recursive Measures of Collaboration Structures}\\ \vspace{0.3cm}}
+\title{The Virtuous Circle of Wikipedia\\ \vspace{0.3cm} {Recursive Measures of Collaboration Structures}\\ \vspace{0.3cm}}
 
 %\numberofauthors{1}
 %\author{[anonymized author names and affiliations]}
